<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/middle_padding"
    android:paddingLeft="@dimen/large_padding"
    android:paddingRight="@dimen/large_padding"
    android:paddingTop="@dimen/middle_padding" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmation"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/very_dark_grayish_blue" />

    <CheckBox
        android:id="@+id/checkBoxAgreeToProcessing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agree_to_processing" />

    <CheckBox
        android:id="@+id/checkBoxAgreeToReceive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agree_to_receive" />

    <CheckBox
        android:id="@+id/checkBoxAgreeThatAdvises"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agree_that_advises" />

</LinearLayout>