<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/middle_padding"
    android:paddingLeft="@dimen/large_padding"
    android:paddingRight="@dimen/large_padding"
    android:paddingTop="@dimen/middle_padding" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_details"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/very_dark_grayish_blue" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="@color/very_dark_grayish_blue" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextRegEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/registration_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/very_dark_grayish_blue" >
    </EditText>

</LinearLayout>