<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayoutTop"
            android:layout_width="match_parent"
            android:layout_height="@dimen/middle_block_hight"
            android:background="@color/bg_tab_1"
            android:baselineAligned="false"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="@dimen/large_padding"
            android:paddingRight="@dimen/large_padding" >

            <TextView
                android:id="@+id/textViewHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/risk_analysis"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textViewSubHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/tab_patient_data"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/middle_padding"
            android:paddingLeft="@dimen/large_padding"
            android:paddingRight="@dimen/large_padding"
            android:paddingTop="@dimen/middle_padding" >

            <RadioGroup
                android:id="@+id/radioGroupGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:checkedButton="@+id/radioButtonMale"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radioButtonMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="0dp"
                    android:text="@string/data_gender_male" />

                <RadioButton
                    android:id="@+id/radioButtonFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="0dp"
                    android:text="@string/data_gender_female" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/radioGroupGender"
                android:text="@string/data_gender"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/very_dark_grayish_blue" />
        </RelativeLayout>

        <View
            style="@style/Divider"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/middle_padding"
            android:paddingLeft="@dimen/large_padding"
            android:paddingRight="@dimen/large_padding"
            android:paddingTop="@dimen/middle_padding" >

            <EditText
                android:id="@+id/editTextAge"
                android:layout_width="@dimen/large_block_width"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:ems="10"
                android:gravity="center_vertical|center_horizontal"
                android:inputType="date"
                android:textColor="@color/very_dark_grayish_blue" >
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/editTextAge"
                android:text="@string/data_age"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/very_dark_grayish_blue" />
        </RelativeLayout>

        <View
            style="@style/Divider"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/middle_padding"
            android:paddingLeft="@dimen/large_padding"
            android:paddingRight="@dimen/large_padding"
            android:paddingTop="@dimen/middle_padding" >

            <EditText
                android:id="@+id/editTextHeigh"
                android:layout_width="@dimen/large_block_width"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:ems="10"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/data_height_hint"
                android:inputType="number" >
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/editTextHeigh"
                android:text="@string/data_height"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/very_dark_grayish_blue" />
        </RelativeLayout>

        <View
            style="@style/Divider"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/middle_padding"
            android:paddingLeft="@dimen/large_padding"
            android:paddingRight="@dimen/large_padding"
            android:paddingTop="@dimen/middle_padding" >

            <EditText
                android:id="@+id/editTextWeight"
                android:layout_width="@dimen/large_block_width"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:ems="10"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/data_weight_hint"
                android:inputType="number" >
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/editTextWeight"
                android:text="@string/data_weight"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/very_dark_grayish_blue" />
        </RelativeLayout>

        <View
            style="@style/Divider"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/middle_padding"
            android:paddingLeft="@dimen/large_padding"
            android:paddingRight="@dimen/large_padding"
            android:paddingTop="@dimen/middle_padding" >

            <EditText
                android:id="@+id/editTextCholesterol"
                android:layout_width="@dimen/large_block_width"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:ems="10"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/data_cholesterol_hint"
                android:inputType="number" >
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/editTextCholesterol"
                android:text="@string/data_cholesterol"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/very_dark_grayish_blue" />
        </RelativeLayout>

        <View
            style="@style/Divider"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/middle_padding"
            android:paddingLeft="@dimen/large_padding"
            android:paddingRight="@dimen/large_padding"
            android:paddingTop="@dimen/middle_padding" >

            <Switch
                android:id="@+id/switchSmoking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textOff="@string/no"
                android:textOn="@string/yes" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/switchSmoking"
                android:text="@string/data_smoking"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/very_dark_grayish_blue" />
        </RelativeLayout>

        <View
            style="@style/Divider"
            android:layout_width="match_parent"
            android:layout_height="1dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <include
            android:id="@+id/layoutBottomInside"
            layout="@layout/layout_bottom_inside_menu" />

        <include
            android:id="@+id/layoutBottomOutside"
            layout="@layout/layout_bottom_outside_menu" />
    </LinearLayout>

</RelativeLayout>